@startuml
skinparam classAttributeIconSize 0

class Formateur {
  +id : int
  +nom : string
  +email : string
  +password : string
}

class Responsable {
  +id : int
  +nom : string
  +email : string
  +password : string
}

class Module {
  +id : int
  +nom : string
  +masse_horaire_totale : int
}

class Session {
  +id : int
  +date : date
  +heure_debut : time
  +heure_fin : time
  +duree : int
  +etat_validation : string <<enum: ['en attente', 'validée', 'refusée']>>
  +formateur_id : int
  +module_id : int
}

Formateur "1" -- "0..*" Session : planifie
Module "1" -- "0..*" Session : concerne
Responsable "1" -- "0..*" Session : valide >>
@enduml
